--- a/back-end/.env.sample
+++ b/back-end/.env.sample
@@ -1,5 +1,5 @@
-DATABASE_URL= postgres://luxzaqmk:yMw2hJfa0S4A30Rr7FJS5zYp1I3n4io-@jelani.db.elephantsql.com/luxzaqmk
-DATABASE_URL_DEVELOPMENT= postgres://rpzwcxnb:XqecKODu0yz57jLhKp6_UxBhkit2lruH@jelani.db.elephantsql.com/rpzwcxnb
-DATABASE_URL_TEST= postgres://ovjgoebt:yiJUguFHTd8hxjPRBFp1vnHwo5pUNNP2@jelani.db.elephantsql.com/ovjgoebt
-DATABASE_URL_PREVIEW= postgres://sluhbime:B9e-ObDLdnrO19fynEooGtxL8G8USj1p@jelani.db.elephantsql.com/sluhbime
+DATABASE_URL = postgres://luxzaqmk:yMw2hJfa0S4A30Rr7FJS5zYp1I3n4io-@jelani.db.elephantsql.com/luxzaqmk
+  DATABASE_URL_DEVELOPMENT = postgres://sluhbime:B9e-ObDLdnrO19fynEooGtxL8G8USj1p@jelani.db.elephantsql.com/sluhbime
+  DATABASE_URL_TEST = postgres://ovjgoebt:yiJUguFHTd8hxjPRBFp1vnHwo5pUNNP2@jelani.db.elephantsql.com/ovjgoebt
+  DATABASE_URL_PREVIEW = postgres://rpzwcxnb:XqecKODu0yz57jLhKp6_UxBhkit2lruH@jelani.db.elephantsql.com/rpzwcxnb
 LOG_LEVEL=info
