--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "author": "Thinkful, Inc.",
   "license": "UNLICENSED",
   "dependencies": {
-    "knex": "^2.3.0"
+    "knex": "^2.3.0",
+    "puppeteer": "^19.0.0"
   }
 }
